--- a/Portfolio-2/DataAccess/DataAccess.csproj
+++ b/Portfolio-2/DataAccess/DataAccess.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.9" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0-rc2" />
     </ItemGroup>
