--- a/Portfolio-2/WebService/WebService.csproj
+++ b/Portfolio-2/WebService/WebService.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="wwwroot\Images" />
+      <Folder Include="wwwroot\resources" />
     </ItemGroup>
 
 </Project>
