--- a/Portfolio-2/WebService/WebService.csproj
+++ b/Portfolio-2/WebService/WebService.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="wwwroot\js\components" />
       <Folder Include="wwwroot\resources" />
     </ItemGroup>
 
