--- a/Portfolio-2/WebService/Properties/launchSettings.json
+++ b/Portfolio-2/WebService/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "WebService": {
       "commandName": "Project",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
