--- a/Portfolio-2/WebService/WebService.csproj
+++ b/Portfolio-2/WebService/WebService.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="10.1.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
       <PackageReference Include="xunit.abstractions" Version="2.0.2" />
     </ItemGroup>
 
